infra/k8s/category-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: eduhub/category
---
apiVersion: v1
kind: Service
metadata:
  name: category-srv
spec: 
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 3001
      targetPort: 3000
