infra/k8s/course-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: eduhub/course
---
apiVersion: v1
kind: Service
metadata:
  name: course-srv
spec: 
  selector:
    app: course
  ports:
    - name: course
      protocol: TCP
      port: 3002
      targetPort: 3002
