infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16m'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://eduhub-s2po.vercel.app,https://eduhublearning.online"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,POST,PATCH,PUT,DELETE,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eduhublearning.online
      secretName: api-eduhub-tls
  rules:
    - host: "eduhublearning.online"
      http:
        paths:
          - path: /auth/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /category/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: category-srv
                port:
                  number: 3001
          - path: /course/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 3002
          - path: /purchase/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: purchase-srv
                port:
                  number: 3003
          - path: /profile/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: profile-srv
                port:
                  number: 3004
          - path: /message/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: message-srv
                port:
                  number: 3006
